--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>adsasfad</h1>
+    <h1>Practica21</h1>
+    <h2>Jose Andres Nava Garcia</h2>
+    <h2>Jaime Rodriguez Dennis</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente molestiae quidem cumque! Velit animi quod, nesciunt voluptatum harum inventore voluptates dolore provident fugiat, cum minima quos eius quas porro tenetur!</p>
     <div><img src="img/logo_oficial.png" alt=""></div>
     <p>asd</p>
